# PyPkg-Expts

./: .coveragerc  README.rst  readthedocs.yml  setup.cfg  setup.py
docs/: conf.py  index.rst  pkg_development.rst
envs/: environment-dev.yaml  environment-rtd.yaml  requirements.txt
pypkg_expts/: __init__.py
tests/: test_pypkg_expts.py
